[package]
name = "art-dl"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
far = "0.2.1"
reqwest = { version = "0.11.14", features = ["json"] }
# rusqlite = "0.27.0"
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["sqlite", "json", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
