[package]
name = "art-dl"
version = "0.0.1"
edition = "2021"
authors = ["Ilia <istudyatuni@gmail.com>"]
description = "Artworks downloader"
readme = "README.md"
repository = "https://github.com/istudyatuni/artworks-downloader"
license = "	Apache-2.0"
exclude = [
	"art_dl",
	".editorconfig",
	".gitignore",
	".justfile",
	"*.sublime-project",
	"poetry.lock",
	"pyproject.toml",
]

[profile.release]
strip = true

[dependencies]
nom = "7.1.3"
reqwest = { version = "0.11.14", features = ["json"] }
# rusqlite = "0.27.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
# sqlx = { version = "0.6.2", features = ["sqlite", "json", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
url = "2.3.1"
